<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".controler.AddActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_constraintlayout"
        android:padding="16dp">

        <Spinner
            android:id="@+id/spinner_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="?attr/editTextBackground"
            android:gravity="center_vertical"
            android:hint="@string/add_date"
            app:errorEnabled="true"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="?attr/editTextColor"
            app:layout_constraintBottom_toTopOf="@+id/textview_hour"
            app:layout_constraintTop_toBottomOf="@+id/spinner_meeting" />

        <ImageButton
            android:id="@+id/button_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_calendar"
            app:layout_constraintBottom_toBottomOf="@+id/textview_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textview_date" />

        <TextView
            android:id="@+id/textview_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="?attr/editTextBackground"
            android:gravity="center_vertical"
            android:hint="@string/add_hour"
            app:errorEnabled="true"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="?attr/editTextColor"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout_topic"
            app:layout_constraintTop_toBottomOf="@+id/textview_date" />


        <ImageButton
            android:id="@+id/button_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_clock"
            app:layout_constraintBottom_toBottomOf="@+id/textview_hour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textview_hour" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:errorEnabled="true"

            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmail"
            app:layout_constraintTop_toBottomOf="@+id/textview_hour">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditLayout_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/add_topic"
                android:maxLength="15"
                android:maxLines="1"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_topic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/add_participants"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:closeIconEnabled="true"

            app:layout_constraintBottom_toTopOf="@id/button_validation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail" />

        <Button
            android:id="@+id/button_validation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/validate"

            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>