<resources>
    <string name="app_name">Maréu</string>
    <string name="sort_date">Filtrer par Date</string>
    <string name="sort_location">Filtrer par Salle</string>
    <string name="name_activity">Ma réu</string>
    <string name="add_place">Salle de Réunion</string>
    <string name="add_date">Date de la Réunion</string>
    <string name="add_hour">Heure de la Réunion</string>
    <string name="add_topic">Sujet</string>
    <string name="add_participants">Email des Participants</string>
    <string name="validate">Valider</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>

    <string name="reu_a">Réunion A</string>
    <string name="reu_b">Réunion B</string>
    <string name="reu_c">Réunion C</string>
    <string name="reu_d">Réunion D</string>
    <string name="reu_e">Réunion E</string>
    <string name="reu_f">Réunion F</string>
    <string name="reu_g">Réunion G</string>
    <string name="reu_h">Réunion H</string>
    <string name="reu_i">Réunion I</string>
    <string name="reu_j">Réunion J</string>

    <string name="h">%1$sh%2$s</string>

    <string name="error_space">Veuillez insérer une seule adresse mail à la fois ou supprimer les espaces</string>
    <string name="error_empty">Des participants doivent être ajoutés</string>
    <string name="error_format">Veillez respecter le format d\'une adresse mail</string>
    <string name="error_date">Veuillez renseigner une date</string>
    <string name="error_hour">Veuillez renseigner une heure</string>
    <string name="error_topic">Veuillez renseigner un Sujet</string>
    <string name="error_participants">Veuillez renseigner des participants</string>
    <string name="alert">Alerte</string>
    <string name="delete_reu">Êtes-vous sûr de vouloir supprimer cette réunion ?</string>
    <string name="no_meeting">Aucune reunion à cette date ou Salle</string>


    <string name="date_filter">Filtrer par date</string>
    <string name="place_filter">Filtrer salle de %1$s </string>
    <string name="filter_reset">Réinitialiser les filtres</string>

    <string-array name="meeting_rooms">
        <item>Réunion A</item>
        <item>Réunion B</item>
        <item>Réunion C</item>
        <item>Réunion D</item>
        <item>Réunion E</item>
        <item>Réunion F</item>
        <item>Réunion G</item>
        <item>Réunion H</item>
        <item>Réunion I</item>
        <item>Réunion J</item>
    </string-array>
</resources>
